# PythonAppiumAutomation

./: pyproject.toml  tests.py
